# gestia

./: .gitignore  README.md  debug_db.py  explore_db.py  main.py  manage_env.py  portability_report_windows.json  portability_report_windows_20250729_085329.json  pyproject.toml  requirements.txt  setup.py  test_migration_integration.py
data/backups/: gestia_development_20250630_222644.json
data/samples/: machines_exemple.csv  techniciens_exemple.csv
data/scripts/: backup_manager.py  generate_test_data.py  import_csv.py  migrate_database.py  test_nouvelles_fonctionnalites.py
docs/: STRUCTURE.md  diagramme_enregistrement_machine.md  nouvelles_fonctionnalites.md
src/gestia/: __init__.py
src/gestia/core/: __init__.py  database.py  migration_manager.py  models.py  services.py
src/gestia/ui/: __init__.py  console.py  gui.py
src/gestia/utils/: __init__.py  demo.py
tests/: README.md  __init__.py  test_models.py
tools/: README.md  RESOLUTION_MAC.md  analyse_references.py  check_portability.py  compare_environments.py  demo_tri.py  gestia-migrate.bat  gestia-status.bat  gui_launcher.py  manage_env.py  migrate_database.py  professional_comparison.py  professional_portability_check.py  setup_aliases.ps1  test_dropdown.py
tools/tools/: test
tools/tools/db/: README_MIGRATIONS.md  backup_manager.py  create_migration.py  explore_db.py  init_db.py  migrate_db.py
